feat(admin): Initial implementation of admin CLI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -210,6 +210,10 @@ name = "conduit"
 path = "src/main.rs"
 required-features = ["conduit_bin"]
 
+[[bin]]
+name = "conduit-admin"
+path = "src/bin/admin.rs"
+
 [lib]
 name = "conduit"
 path = "src/lib.rs"
